Add second recipe
Dark Chocolate Hot Cocoa

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="Recipes/LemonPoppySeedPancakes.html">Lemon Poppy Seed Pancakes</a>
-    </body>
+    <ul>
+    <li><a href="Recipes/LemonPoppySeedPancakes.html">Lemon Poppy Seed Pancakes</a></li>
+    <li><a href="Recipes/DarkChocolateHotCocoa.html">Dark Chocolate Hot Cocoa</a></li>
+</ul>
+    
+</body>
 </html>
