Add the third recipe
Mango Salsa

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
     <li><a href="Recipes/LemonPoppySeedPancakes.html">Lemon Poppy Seed Pancakes</a></li>
     <li><a href="Recipes/DarkChocolateHotCocoa.html">Dark Chocolate Hot Cocoa</a></li>
+    <li><a href="Recipes/MangoSalsa.html">Mango Salsa</a></li>
 </ul>
     
 </body>
