Add style to the index.html file

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Odin Recipes</h1><br><br>
     <ul>
-    <li><a href="Recipes/LemonPoppySeedPancakes.html">Lemon Poppy Seed Pancakes</a></li>
-    <li><a href="Recipes/DarkChocolateHotCocoa.html">Dark Chocolate Hot Cocoa</a></li>
-    <li><a href="Recipes/MangoSalsa.html">Mango Salsa</a></li>
+    <li class="list"><a href="Recipes/LemonPoppySeedPancakes.html">Lemon Poppy Seed Pancakes</a></li><br>
+
+    <li class="list"><a href="Recipes/DarkChocolateHotCocoa.html">Dark Chocolate Hot Cocoa</a></li><br>
+    <li class="list"><a href="Recipes/MangoSalsa.html">Mango Salsa</a></li><br>
 </ul>
     
 </body>
