Add style to the recipes

--- a/Recipes/LemonPoppySeedPancakes.html
+++ b/Recipes/LemonPoppySeedPancakes.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lemon Poppy Seed Pancakes</title>
+    <link rel="stylesheet" href="Recipes.css">
 </head>
 <body>
-    <h1>Lemon Poppy Seed Pancakes</h1>
+    <h1 class="headings">Lemon Poppy Seed Pancakes</h1>
     <img src="Images/Lemon Poppy  Seed Pancakes.jpg" alt="Lemon Poppy Seed Pancakes" height="310" width="310">
-    <h2>Description</h2>
+    <h2 class="headings">Description</h2>
     <p>Follow these 3 key techniques so Chef Shania's lemon poppy seed pancakes turn out perfectly: give the lemon zest and sugar time to react, whisk the batter just enough and not too much, and have enough patience to let the batter rest for 10 minutes before cooking. You'll be rewarded with delicious, fluffy pancakes.</p>
-    <h2>Ingredients</h2>
+    <h2 class="headings">Ingredients</h2>
     <ul>
         <li>1 rounded tablespoon white sugar</li>
         <li>1 tablespoon lemon zest, or more to taste</li>
@@ -25,7 +26,7 @@
         <li>1/4 teaspoon baking soda</li>
         <li>lemon wedges (optional)</li>
     </ul>
-    <h2>Steps</h2>
+    <h2 class="headings">Steps</h2>
     <ol>
         <li>Combine sugar and lemon zest, and stir to combine. Let stand about 15 minutes. </li>
         <li>Whisk flour, salt, baking powder, and baking soda together in a separate bowl. Set aside. </li>
