--- a/Recipes/MangoSalsa.html
+++ b/Recipes/MangoSalsa.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mango Salsa</title>
+    <link rel="stylesheet" href="Recipes.css">
 </head>
 <body>
-    <h1>Mango Salsa</h1>
+    <h1 class="headings">Mango Salsa</h1>
     <img src="Images/Mango Salsa.jpg" alt="Mango Salsa" height="310" width="310">
-    <h2>Description</h2>
+    <h2 class="headings">Description</h2>
     <p>This mango salsa recipe is easy to make with ripe mangos, bell pepper, and lime juice. Jalapeños add some heat. It's so refreshing and tasty on fish tacos or with chips for dipping. </p>
-    <h2>Ingredients</h2>
+    <h2 class="headings">Ingredients</h2>
     <ul>
         <li>1 mango - peeled, seeded, and chopped</li>
         <li>¼ cup finely chopped red bell pepper</li>
@@ -19,7 +20,7 @@
         <li>2 tablespoons lime juice</li>
         <li>1 tablespoon lemon juice</li>
     </ul>
-    <h2>Steps</h2>
+    <h2 class="headings">Steps</h2>
     <ol>
         <li>Gather ingredients. </li>
         <li>Place mango, red bell pepper, green onion, jalapeño, cilantro, lime juice, and lemon juice in a medium bowl. </li>
