--- a/Recipes/DarkChocolateHotCocoa.html
+++ b/Recipes/DarkChocolateHotCocoa.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dark Chocolate Hot Cocoa</title>
-  
+   <link rel="stylesheet" href="Recipes.css">
 </head>
 <body>
-    <h1>Dark Chocolate Hot Cocoa</h1>
+    <h1 class="headings">Dark Chocolate Hot Cocoa</h1>
     <img src="Images/Dark Chocolate Hot Cocoa.jpg" alt="DarkChocolateHotCocoa" height="310"   width="310">
-    <h2>Description</h2>
+    <h2 class="headings">Description</h2>
     <p>This dark hot chocolate drink was created when I was craving hot cocoa but I only had dark chocolate on hand. I added cinnamon for a festive touch. Pour into a mug and top with whipped cream or marshmallows, if desired. Serve hot.</p>
-    <h2>Ingredients</h2>
+    <h2 class="headings">Ingredients</h2>
     <ul>
         <li>1 cup whole milk</li>
         <li>1 ½ teaspoons brown sugar, or to taste</li>
@@ -19,7 +19,7 @@
         <li>1 tablespoon heavy whipping cream, or more to taste</li>
         <li>1 pinch ground cinnamon, or more to taste</li>
     </ul>
-    <h2>Steps</h2>
+    <h2 class="headings">Steps</h2>
     <ol>
         <li>Heat milk in a saucepan over medium heat until just before boiling, 3 to 4 minutes. Add brown sugar and stir until dissolved, about 1 minute. Stir dark chocolate into milk until melted, 2 to 3 minutes.</li>
         <li>Remove saucepan from heat and stir cream and cinnamon into milk mixture. Serve hot. </li>
