Add margin and padding to the css files

--- a/Recipes/LemonPoppySeedPancakes.html
+++ b/Recipes/LemonPoppySeedPancakes.html
@@ -7,11 +7,23 @@
     <link rel="stylesheet" href="Recipes.css">
 </head>
 <body>
-    <h1 class="headings">Lemon Poppy Seed Pancakes</h1>
+    <div id="full">
+    <div class="titles">
+    <h1>Lemon Poppy Seed Pancakes</h1>
+</div>
+<div class="contents">
     <img src="Images/Lemon Poppy  Seed Pancakes.jpg" alt="Lemon Poppy Seed Pancakes" height="310" width="310">
-    <h2 class="headings">Description</h2>
+</div>
+    <div class="titles">
+    <h2>Description</h2>
+</div>
+<div class="contents">
     <p>Follow these 3 key techniques so Chef Shania's lemon poppy seed pancakes turn out perfectly: give the lemon zest and sugar time to react, whisk the batter just enough and not too much, and have enough patience to let the batter rest for 10 minutes before cooking. You'll be rewarded with delicious, fluffy pancakes.</p>
-    <h2 class="headings">Ingredients</h2>
+</div>
+    <div class="titles">
+    <h2>Ingredients</h2>
+</div>
+<div class="contents">
     <ul>
         <li>1 rounded tablespoon white sugar</li>
         <li>1 tablespoon lemon zest, or more to taste</li>
@@ -26,7 +38,11 @@
         <li>1/4 teaspoon baking soda</li>
         <li>lemon wedges (optional)</li>
     </ul>
-    <h2 class="headings">Steps</h2>
+</div>
+    <div class="titles">
+    <h2>Steps</h2>
+</div>
+<div class="contents">
     <ol>
         <li>Combine sugar and lemon zest, and stir to combine. Let stand about 15 minutes. </li>
         <li>Whisk flour, salt, baking powder, and baking soda together in a separate bowl. Set aside. </li>
@@ -34,6 +50,7 @@
         <li>Heat a nonstick skillet over medium heat, and generously grease with melted butter or vegetable oil. </li>
         <li>Transfer about 1/3 cup of batter into the pan for each pancake, and cook until a few bubbles start to pop through the surface, 3 to 4 minutes. Flip and cook the second side 3 to 4 minutes. Serve immediately. </li>
     </ol>
-
+</div>
+</div>
 </body>
 </html>
