--- a/Recipes/MangoSalsa.html
+++ b/Recipes/MangoSalsa.html
@@ -7,11 +7,23 @@
     <link rel="stylesheet" href="Recipes.css">
 </head>
 <body>
-    <h1 class="headings">Mango Salsa</h1>
+    <div id="full">
+    <div class="titles">
+    <h1>Mango Salsa</h1>
+</div>
+<div class="contents">
     <img src="Images/Mango Salsa.jpg" alt="Mango Salsa" height="310" width="310">
-    <h2 class="headings">Description</h2>
+</div>
+    <div class="titles">
+    <h2>Description</h2>
+</div>
+<div class="contents">
     <p>This mango salsa recipe is easy to make with ripe mangos, bell pepper, and lime juice. Jalapeños add some heat. It's so refreshing and tasty on fish tacos or with chips for dipping. </p>
-    <h2 class="headings">Ingredients</h2>
+</div>
+    <div class="titles">
+    <h2>Ingredients</h2>
+</div>
+<div class="contents">
     <ul>
         <li>1 mango - peeled, seeded, and chopped</li>
         <li>¼ cup finely chopped red bell pepper</li>
@@ -20,13 +32,18 @@
         <li>2 tablespoons lime juice</li>
         <li>1 tablespoon lemon juice</li>
     </ul>
-    <h2 class="headings">Steps</h2>
+</div>
+    <div class="titles">
+    <h2>Steps</h2>
+</div>
+<div class="contents">
     <ol>
         <li>Gather ingredients. </li>
         <li>Place mango, red bell pepper, green onion, jalapeño, cilantro, lime juice, and lemon juice in a medium bowl. </li>
         <li>Mix ingredients well to combine. Cover and let sit at least 30 minutes before serving. </li>
         <li>Serve with chips. </li>
     </ol>
-
+</div>
+</div>
 </body>
 </html>
